fix: adjust headline on mobile devices

--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -1,6 +1,6 @@
 .header {
   background-color: #282c34;
-  padding: 20px;
+  padding: 20px 0 20px 0;
   color: white;
   text-align: center;
   width: 100%;
